<resources>
    <string name="app_name">Aladdin Delivery</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name (Restaurant or..etc) </string>
    <string name="nav_header_subtitle">salehmohammed19982020@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main">Main</string>
    <string name="menu_addOrder">Add New Order</string>
    <string name="menu_myInformation">My information</string>
    <string name="menu_aboutApp">About App </string>
    <string name="menu_logout">Logout </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_share">Share</string>
    <string name="menu_help">Help</string>
    <string name="menu_addItem">Add New Item</string>
</resources>